--- a/UBankiOS/UBankiOS/Base.lproj/Main.storyboard
+++ b/UBankiOS/UBankiOS/Base.lproj/Main.storyboard
@@ -14,11 +14,24 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xRV-Bu-x5H">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xRV-Bu-x5H" secondAttribute="trailing" id="AdA-Ay-VV1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xRV-Bu-x5H" secondAttribute="bottom" id="fsC-JD-Ylj"/>
+                            <constraint firstItem="xRV-Bu-x5H" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="lyS-Xf-mrp"/>
+                            <constraint firstItem="xRV-Bu-x5H" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ypf-n7-bNy"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Accounts" id="jpb-z3-Rpc"/>
                     <connections>
+                        <outlet property="accountsTableView" destination="xRV-Bu-x5H" id="Tdx-yf-NFx"/>
                         <segue destination="yG2-Ag-BFK" kind="show" identifier="showTransactionView" id="XS3-OH-Bgy"/>
                     </connections>
                 </viewController>
@@ -33,10 +46,25 @@
                     <view key="view" contentMode="scaleToFill" id="vOU-An-RDl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sbo-QB-rG4">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="sbo-QB-rG4" firstAttribute="leading" secondItem="LZX-q2-QTM" secondAttribute="leading" id="4UL-Ph-c5P"/>
+                            <constraint firstItem="LZX-q2-QTM" firstAttribute="trailing" secondItem="sbo-QB-rG4" secondAttribute="trailing" id="ZPz-gd-Laj"/>
+                            <constraint firstItem="LZX-q2-QTM" firstAttribute="bottom" secondItem="sbo-QB-rG4" secondAttribute="bottom" id="fKC-Xd-0Vd"/>
+                            <constraint firstItem="sbo-QB-rG4" firstAttribute="top" secondItem="LZX-q2-QTM" secondAttribute="top" id="nYP-zL-bIm"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="LZX-q2-QTM"/>
                     </view>
                     <navigationItem key="navigationItem" title="Transactions" id="ldA-RD-6gp"/>
+                    <connections>
+                        <outlet property="transactionsTableView" destination="sbo-QB-rG4" id="reH-cc-FLr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uUB-jL-vAH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
