--- a/UBankiOS/UBankiOS/TableViewCells/TransactionsTableViewCell.xib
+++ b/UBankiOS/UBankiOS/TableViewCells/TransactionsTableViewCell.xib
@@ -9,42 +9,42 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TransactionsTableViewCell" rowHeight="70" id="kaJ-HF-fYS" customClass="TransactionsTableViewCell" customModule="SampleMVVM" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TransactionsTableViewCell" rowHeight="70" id="kaJ-HF-fYS" customClass="TransactionsTableViewCell" customModule="UBankiOS" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kaJ-HF-fYS" id="qh4-19-KsX">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dAq-iW-1LK">
-                        <rect key="frame" x="10" y="0.0" width="300" height="70"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="dAq-iW-1LK">
+                        <rect key="frame" x="10" y="10" width="300" height="50"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="THp-hD-hXx">
-                                <rect key="frame" x="0.0" y="0.0" width="42" height="70"/>
+                                <rect key="frame" x="0.0" y="0.0" width="145" height="50"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RqX-5Y-lSw">
-                                        <rect key="frame" x="0.0" y="0.0" width="42" height="70"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RqX-5Y-lSw">
+                                        <rect key="frame" x="0.0" y="0.0" width="145" height="50"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="RqX-5Y-lSw" firstAttribute="centerY" secondItem="THp-hD-hXx" secondAttribute="centerY" id="AIv-7s-JYJ"/>
+                                    <constraint firstItem="RqX-5Y-lSw" firstAttribute="top" secondItem="THp-hD-hXx" secondAttribute="top" id="TvT-5T-1Cn"/>
                                 </constraints>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="P4L-dQ-pHS">
-                                <rect key="frame" x="42" y="0.0" width="258" height="70"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="P4L-dQ-pHS">
+                                <rect key="frame" x="155" y="0.0" width="145" height="50"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GG8-bC-cd1">
-                                        <rect key="frame" x="0.0" y="0.0" width="258" height="35"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GG8-bC-cd1">
+                                        <rect key="frame" x="0.0" y="0.0" width="145" height="22.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vy3-VJ-rbs">
-                                        <rect key="frame" x="0.0" y="35" width="258" height="35"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vy3-VJ-rbs">
+                                        <rect key="frame" x="0.0" y="27.5" width="145" height="22.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -54,10 +54,10 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="dAq-iW-1LK" secondAttribute="bottom" id="8Jm-kQ-ypc"/>
+                    <constraint firstAttribute="bottom" secondItem="dAq-iW-1LK" secondAttribute="bottom" constant="10" id="8Jm-kQ-ypc"/>
                     <constraint firstAttribute="trailing" secondItem="dAq-iW-1LK" secondAttribute="trailing" constant="10" id="SiD-gL-0GQ"/>
                     <constraint firstItem="dAq-iW-1LK" firstAttribute="leading" secondItem="qh4-19-KsX" secondAttribute="leading" constant="10" id="TFP-4b-pJW"/>
-                    <constraint firstItem="dAq-iW-1LK" firstAttribute="top" secondItem="qh4-19-KsX" secondAttribute="top" id="Tg4-sz-fZI"/>
+                    <constraint firstItem="dAq-iW-1LK" firstAttribute="top" secondItem="qh4-19-KsX" secondAttribute="top" constant="10" id="Tg4-sz-fZI"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="7Qw-sq-ffY"/>
