Unit test cases for Accounts and transactions

--- a/UBankiOS/UBankiOS/Base.lproj/Main.storyboard
+++ b/UBankiOS/UBankiOS/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--Accounts-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="AccountsViewController" customModule="UBankiOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AccountsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="AccountsViewController" customModule="UBankiOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -42,7 +42,7 @@
         <!--Transactions-->
         <scene sceneID="qfN-IL-dPt">
             <objects>
-                <viewController id="yG2-Ag-BFK" customClass="TransactionsViewController" customModule="UBankiOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TransactionsViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="yG2-Ag-BFK" customClass="TransactionsViewController" customModule="UBankiOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="vOU-An-RDl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
